--- a/CSS/style.css
+++ b/CSS/style.css
@@ -658,6 +658,7 @@ color:var(--primary-font-color);
     border: 1px solid rgba(255, 255, 255, 0.3);
     filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
     border-radius: 4px;
+    color: var(--third-font-color);
 }
 
 .subscribe-input::placeholder{
@@ -866,7 +867,7 @@ color:var(--primary-font-color);
     line-height: 1.15;
     text-align: center;
     letter-spacing: 0.03em;
-    margin-bottom: 30px;
+    margin-bottom: 12px;
 
     color: #212121;
 }
@@ -932,6 +933,7 @@ color: #757575;
     font-weight: 700;
     font-size: 16px;
     line-height: 1.87;
+    letter-spacing: 0.06em;
     color:var(--third-font-color);
     display: flex;
     margin-right: auto;
